Changed footer visibility bug

--- a/src/pages/AddProduct/AddProduct.css
+++ b/src/pages/AddProduct/AddProduct.css
@@ -212,6 +212,7 @@
 
 #footer {
 	bottom: 0;
+	margin-top: 30px;
 	width: 100%;
 	height: 100px;
 	background-color: rgb(96, 178, 230);
